--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="container">
         <h1>Happy Birthday Ranjith (Pichoda)💗</h1>
         <div class="greeting"></div>
-        <button class="cta-button">Click to Enter Our World 💕</button>
+		
+	<button class="cta-button" id="playBtn">
+    Play the Music my love and Enter Our World 💕
+</button>
+	
     </div>
 
     <script src="script.js">
