--- a/cause.html
+++ b/cause.html
@@ -10,7 +10,13 @@
        
     </style>
 </head>
+
+
+
 <body>
+<audio id="bgMusic" loop>
+    <source src="assets/audio/hbd.mp3" type="audio/mpeg">
+</audio>
     <div class="custom-cursor">
         <svg viewBox="0 0 24 24">
             <path fill="#ff69b4" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
@@ -36,5 +42,26 @@
     <script src="cause.js">
        
     </script>
+	<script>
+window.addEventListener("load", function () {
+
+    const music = document.getElementById("bgMusic");
+
+    if (localStorage.getItem("startMusic") === "true") {
+
+        music.play();
+
+        // Save current time continuously
+        music.addEventListener("timeupdate", function () {
+            localStorage.setItem("musicTime", music.currentTime);
+        });
+
+        localStorage.setItem("musicPlaying", "true");
+        localStorage.removeItem("startMusic");
+    }
+
+});
+</script>
+
 </body>
 </html>
