--- a/last.html
+++ b/last.html
@@ -359,7 +359,7 @@
     </style>
 </head>
 <audio id="bgMusic" loop>
-    <source src="assets/audio/hbd.mp3" type="audio/mpeg">
+    <source src="hbd.mp3" type="audio/mpeg">
 </audio>
 
 
