--- a/cause.html
+++ b/cause.html
@@ -15,7 +15,7 @@
 
 <body>
 <audio id="bgMusic" loop>
-    <source src="assets/audio/hbd.mp3" type="audio/mpeg">
+    <source src="hbd.mp3" type="audio/mpeg">
 </audio>
     <div class="custom-cursor">
         <svg viewBox="0 0 24 24">
