--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="cursor"></div>
     <div class="container">
-        <h1>Happy Birthday Ranjith (Pichoda)💗</h1>
+        <h1>💖 "Pichoda, I can’t wait to show you something even more exciting! 😍✨"</h1>
         <div class="greeting"></div>
 		
 	<button class="cta-button" id="playBtn">
-    Play the Music my love and Enter Our World 💕
+    Welcome to Your Special Day, My Love 🎂
 </button>
 	
     </div>
