--- a/last.html
+++ b/last.html
@@ -142,7 +142,8 @@
         }
 
         .welcome h1 {
-            font-family: 'Dancing Script', cursive;
+            font-family: 'Playfair Display', serif;
+			font-style: italic;
             font-size: 4rem;
             color: #ff69b4;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
@@ -150,6 +151,9 @@
         }
 
         .welcome p {
+			font-family: 'Playfair Display', serif;
+			font-style: italic;
+			color: #32CD32; /* lime green */
             font-size: 1.2rem;
             max-width: 600px;
             margin: 1.5rem auto;
@@ -214,7 +218,7 @@
         }
 
         .memory-date {
-            font-family: 'Dancing Script', cursive;
+            font-family: 'Great Vibes', cursive;
             color: #ff69b4;
             font-size: 1.3rem;
             margin-bottom: 0.5rem;
@@ -376,36 +380,35 @@
 
     <section class="welcome">
         <h1>Our Beautiful Moments Together</h1>
-        <p>Every moment spent with you has been magical. Let's cherish these precious memories ...</p>
+        <p>Rare meet-up's of our long distance relationship and wishing it to end soon. But its okay lets cherish our Memories together ... </p>
     </section>
 
     <div class="memory-container">
         <div class="memory-card">
             <img src="./d1.jpg" alt="First Date" class="memory-img">
-            <div class="memory-date">His Smile Says It All</div>
-            <div class="memory-caption">You’re the only person I am able to say everything❤️</div>
+            <div class="memory-date">Starting point of everything</div>
+            <div class="memory-caption">Our first dating spot, first pic together , first bike ride, first time had food together, we sat next together, our first hand holdings , first sunrise and first sunset together etc... ❤️</div>
         </div>
         <div class="memory-card">
             <img src="./d2.jpg" alt="Beach Day" class="memory-img">
-            <div class="memory-date">Together Vibes</div>
-            <div class="memory-caption">May your journey ahead be filled with happiness, success, and endless
-                smiles.😊💕</div>
+            <div class="memory-date">Celebrating our first birthday as a couple</div>
+            <div class="memory-caption">You made my day so special and emotional ,I received lot of gifts and surprises from your end. Finally that day ended without fight and happy tears😊💕</div>
         </div>
         <div class="memory-card">
-            <img src="./d3.jpg" alt="Movie Night" class="memory-img">
-            <div class="memory-date">Pretty Soul</div>
-            <div class="memory-caption">Keep being the amazing person you are—you make every moment brighter.🌸💖</div>
+            <img src="./d4.jpg" alt="Movie Night" class="memory-img">
+            <div class="memory-date">Puriest Soul</div>
+            <div class="memory-caption">You're the only boy who stood with my sad days. Your warmth, your words, the way you pampered, the way priortised me over small things, how lovely person you're.🌸💖</div>
         </div>
 
     </div>
 
     <section class="final-message">
-        <h2>Thank You for the Memories</h2>
-        <p>Every laugh, every chat, and every moment we’ve shared has been truly special.💫<br>
-            I’m so grateful for the bond we have, and for the positivity you always bring into my life.<br>
+        <h2>Thank You for your presence in my life</h2>
+        <p>Some days we laughed a lot, we cried a lot, we fought a lot, <br> we worried a lot about our future. We didn't give at any situation.💫c
+            I’m so grateful to have in my life. For so many years, I dreamed of a life partner like you. Someone who is my friend, well-wisher, soulmate, boyfriend, my peace, my talking Tom, and even my fighting partner. I waited so long… and finally, I found it all in you. <br>
             On your birthday, I just wish for endless happiness, love, and success to come your way.🌸</p>
-        <p>You deserve all the joy in the world—keep shining and spreading your beautiful energy.✨</p>
-        <a href="#" class="goodbye-btn">Until We Meet Again 💝</a>
+        <p>You deserve all the good things in your life.✨</p>
+        <a href="#" class="goodbye-btn">Love you lot babes💝</a>
     </section>
 	<script>
 window.addEventListener("load", function () {
