--- a/cause.html
+++ b/cause.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why You're My Best Friend! 💖</title>
+    <title>Why You're My Best Person I ever met in my life! 💖</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link rel="stylesheet" href="./cause.css">
     <style>
@@ -18,11 +18,11 @@
     </div>
 
     <div class="container">
-        <h1>Happy Birthday Priyaa 💖</h1>
+        <h1>Happy Birthday Pichoda 💖</h1>
         
         <div id="reasons-container"></div>
         
-        <button class="shuffle-button">Click Here... 💕</button>
+        <button class="shuffle-button">Some things are waiting for you babes, Please open 💕</button>
         <div class="reason-counter"></div>
 
         <div class="ending-section">
