--- a/last.html
+++ b/last.html
@@ -408,7 +408,7 @@
             I’m so grateful to have in my life. For so many years, I dreamed of a life partner like you. Someone who is my friend, well-wisher, soulmate, boyfriend, my peace, my talking Tom, and even my fighting partner. I waited so long… and finally, I found it all in you. <br>
             On your birthday, I just wish for endless happiness, love, and success to come your way.🌸</p>
         <p>You deserve all the good things in your life.✨</p>
-        <a href="#" class="goodbye-btn">Love you lot babes💝</a>
+        <a href="friends.html" class="goodbye-btn">Love you lot babes💝</a>
     </section>
 	<script>
 window.addEventListener("load", function () {
